testsuite/tests/deriving/should_fail/T9687.stderr

T9687.hs:4:10: error: [GHC-97044]
    • Class ‘Typeable’ does not support user-specified instances.
    • In the instance declaration for
        ‘Typeable (a, b, c, d, e, f, g, h)’
